# SFMLCollision

./: .directory  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  Untitled.ipynb  build.sh  cmake_install.cmake  collision  working_notes.md
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Docs/html/: _line_8hpp_source.html  _polygon_8hpp_source.html  _triangle_8hpp_source.html  _vector_math_8hpp_source.html  annotated.html  class_line-members.html  class_line.html  class_polygon-members.html  class_polygon.html  class_triangle-members.html  class_triangle.html  class_vector_math-members.html  class_vector_math.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html
Docs/latex/: annotated.tex  class_line.tex  class_polygon.eps  class_polygon.tex  class_triangle.tex  class_vector_math.tex  hierarchy.tex  refman.aux  refman.idx  refman.out  refman.tex
Docs/rtf/: refman.rtf
Docs/xml/: _intersects_8cpp.xml  _line_8cpp.xml  _line_8hpp.xml  _polygon_8cpp.xml  _polygon_8hpp.xml  _triangle_8cpp.xml  _triangle_8hpp.xml  _vector_math_8cpp.xml  _vector_math_8hpp.xml  class_line.xml  class_polygon.xml  class_triangle.xml  class_vector_math.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml  main_8cpp.xml  (+2 more)
Examples/: DetailComparison.cpp  LineIntersection.cpp
Images/: .directory
include/: Line.hpp  Polygon.hpp  VectorMath.hpp
src/: Intersects.cpp  Line.cpp  Line.hpp  Polygon.cpp  Polygon.hpp  Triangle.cpp  Triangle.hpp  VectorMath.cpp  VectorMath.hpp  main.cpp
(+7 files in other folders)
